--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tinyCome/hello",
+    "name": "tinyCome/silvia",
     "description": "silvia hello world",
     "keywords": [
         "silvia",
